--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -12,15 +12,14 @@
     "@angular/platform-browser-dynamic": "^2.2.0",
     "@angular/router": "^3.1.0",
     "@angular/upgrade": "^2.2.0",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^2.2.1",
     "@types/node": "^6.0.45",
     "angular-in-memory-web-api": "^0.2.1",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0",
+    "rxjs": "^5.0.1",
     "systemjs": "^0.19.39",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.7.2",
+    "svogv": "^0.0.7"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
@@ -36,7 +35,6 @@
     "gulp-remove-html-comments": "^1.0.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-flatten": "^0.3.1",
-    "typescript": "^2.0.3",
-    "webpack": "^2.2.0-rc.1"
+    "typescript": "^2.0.3"
   }
 }
