--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
+    "@types/rx": "^2.5.33",
+    "@types/gulp": "^3.8.29",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^2.2.4",
     "del": "^2.2.2",
