--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -7,7 +7,7 @@
   "typings": "./index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/angular/material2.git"
+    "url": "https://github.com/joergkrause/svogv.git"
   },
   "keywords": [
     "angular",
