--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -8,7 +8,8 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmitOnError": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
+    "suppressImplicitAnyIndexErrors": true,
     "outDir": "../../dist/svogv",
     "rootDir": ".",
     "sourceMap": true,
