--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -29,25 +29,25 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.1",
     "systemjs": "^0.19.39",
-    "zone.js": "^0.7.2",
-    "svogv": "^0.0.7"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
-    "@types/rx": "^2.5.33",
     "@types/gulp": "^3.8.29",
+    "@types/rx": "^2.5.33",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^2.2.4",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-print": "^2.0.1",
+    "gulp-remove-html-comments": "^1.0.1",
     "gulp-sass": "^2.3.2",
     "gulp-typescript": "^3.0.2",
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
-    "gulp-remove-html-comments": "^1.0.1",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-flatten": "^0.3.1",
     "typescript": "^2.0.3"
   }
 }
