--- a/src/demo/tsconfig.json
+++ b/src/demo/tsconfig.json
@@ -7,18 +7,24 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   },
-  "compileOnSave":  false,
-  "files": [ "./Client/App/app.ts", "./Client/App/**/*.ts" ],
+  "compileOnSave": false,
+  "files": [
+    "./Client/App/app.ts",
+    "./Client/App/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "wwwroot",
     "typings/**",
     "typings/*.d.ts"
   ],
-  "typeRoots": [
-    "./node_modules/@types"
-  ],
-  "types": [ "core-js", "node" ]
+  "types": [
+    "core-js",
+    "node"
+  ]
 }
