--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "0.0.9",
   "name": "svogv-demo",
   "description": "This is the demo app that shows most of the components in action",
   "author": {
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "gulp default",
     "start": "http-server ../../dist/demo -p 3000 -o",
-    "exec": "gulp default && npm start"
+    "exec": "gulp default && npm run start"
   },
   "private": true,
   "dependencies": {
