--- a/src/demo/tsconfig.json
+++ b/src/demo/tsconfig.json
@@ -7,10 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false,
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "noImplicitAny": false
   },
   "compileOnSave": false,
   "files": [
@@ -26,5 +23,8 @@
   "types": [
     "core-js",
     "node"
+  ],
+  "typeRoots": [
+    "./node_modules/@types"
   ]
 }
