--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -48,6 +48,7 @@
     "gulp-typescript": "^3.0.2",
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
+    "systemjs-builder": "^0.15.34",
     "typescript": "^2.0.3"
   }
 }
