--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/http": "^2.2.0",
     "@angular/platform-browser": "^2.2.0",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.0.1",
     "systemjs": "0.19.38",
     "zone.js": "^0.7.2"
   },
@@ -61,17 +61,17 @@
     "@types/node": "^6.0.34",
     "@types/protractor": "^4.0.0",
     "@types/run-sequence": "0.0.27",
-    "@types/rx": "^2.5.33",
+    "@types/rx": "^4.1.1",
     "@types/selenium-webdriver": "2.53.36",
     "axe-core": "^2.0.7",
-    "axe-webdriverjs": "^0.4.0",
+    "axe-webdriverjs": "^0.5.0",
     "conventional-changelog": "^1.1.0",
     "dgeni": "^0.4.2",
     "dgeni-packages": "^0.16.2",
     "express": "^4.14.0",
-    "firebase-tools": "^2.2.1",
-    "fs-extra": "^0.26.5",
-    "glob": "^6.0.4",
+    "firebase-tools": "^3.2.1",
+    "fs-extra": "^1.0.0",
+    "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-better-rollup": "^1.0.2",
@@ -82,37 +82,36 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-markdown": "^1.2.0",
-    "gulp-sass": "^2.3.2",
+    "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.5.2",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^2.2.3",
     "gulp-transform": "^1.1.0",
-    "gulp-typescript": "^2.13.6",
-    "hammerjs": "^2.0.8",
+    "gulp-typescript": "^3.1.4",
     "highlight.js": "^9.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
     "karma-browserstack-launcher": "^1.0.1",
-    "karma-chrome-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-sauce-launcher": "^1.0.0",
     "madge": "^0.6.0",
     "merge2": "^1.0.2",
     "minimist": "^1.2.0",
-    "node-sass": "^3.4.2",
+    "node-sass": "^4.2.0",
     "protractor": "^4.0.8",
     "resolve-bin": "^0.4.0",
     "run-sequence": "^1.2.2",
     "sass": "^0.5.0",
-    "selenium-webdriver": "2.53.3",
+    "selenium-webdriver": "^3.0.0",
     "strip-ansi": "^3.0.0",
     "stylelint": "^7.7.0",
     "symlink-or-copy": "^1.0.1",
     "travis-after-modes": "0.0.6-2",
-    "ts-node": "^0.7.3",
-    "tslint": "^3.13.0",
+    "ts-node": "^2.0.0",
+    "tslint": "^4.3.1",
     "typedoc": "^0.5.1",
-    "typescript": "~2.0.10",
+    "typescript": "~2.1.4",
     "which": "^1.2.4"
   }
 }
