Travis build improvements

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-sudo: false
+sudo: required
 
 node_js:
   - '6.9.1'
@@ -26,12 +26,12 @@ env:
   matrix:
     # Order: a slower build first, so that we don't occupy an idle travis worker waiting for others to complete.
     - MODE=lint
-    - MODE=extract_metadata
-    - MODE=e2e
-    - MODE=saucelabs_required
-    - MODE=browserstack_required
-    - MODE=saucelabs_optional
-    - MODE=browserstack_optional
+    - MODE=build
+    - MODE=demo
+    # - MODE=saucelabs_required
+    # - MODE=browserstack_required
+    # - MODE=saucelabs_optional
+    # - MODE=browserstack_optional
 
 matrix:
   fast_finish: true
