--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "An advanced set of Angular 4 (Angular2) widgets and model driven forms support.",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build:components",
-    "demoall": "gulp build:components && cd src/demo && npm run exec",
+    "build": "gulp build",
+    "demoall": "gulp build && cd src/demo && npm run exec",
     "execdemo": "cd src/demo && npm run exec",
     "test": "gulp test",
     "tslint": "gulp lint",
