travis less verbose

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 sudo: required
 
+notifications:
+  slack:
+    on_success: always
+    on_failure: never
+
 node_js:
   - '6.9.1'
 
