--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^2.2.3",
     "gulp-transform": "^1.1.0",
+    "gulp-typedoc": "^2.0.2",
     "gulp-typescript": "^3.1.4",
     "highlight.js": "^9.9.0",
     "jasmine-core": "^2.4.1",
