--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -32,11 +32,13 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@angularclass/hmr-loader": "^3.0.2",
     "@types/core-js": "^0.9.34",
     "@types/gulp": "^3.8.29",
     "@types/rx": "^2.5.33",
     "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "^3.0.0-beta.10",
+    "css-loader": "^0.26.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
@@ -48,7 +50,10 @@
     "gulp-typescript": "^3.0.2",
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
+    "node-sass": "^4.3.0",
+    "resolve-url-loader": "^1.6.1",
+    "sass-loader": "^4.1.1",
     "systemjs-builder": "^0.15.34",
-    "typescript": "^2.0.3"
+    "typescript": "^2.1.4"
   }
 }
