--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.1",
+    "svogv": "^0.0.23",
     "systemjs": "^0.19.39",
     "zone.js": "^0.7.2"
   },
@@ -54,6 +55,8 @@
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "systemjs-builder": "^0.15.34",
-    "typescript": "^2.1.4"
+    "ts-loader": "^2.0.0",
+    "typescript": "^2.1.4",
+    "webpack": "^2.2.0"
   }
 }
