--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular/platform-browser-dynamic": "^2.2.0",
     "@angular/platform-server": "^2.2.0",
     "@angular/router": "^3.2.0",
+    "@types/core-js": "^0.9.35",
     "@types/glob": "^5.0.29",
     "@types/gulp": "^3.8.29",
     "@types/hammerjs": "^2.0.30",
