--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^2.2.0",
     "@angular/router": "^3.1.0",
     "@angular/upgrade": "^2.2.0",
+    "@types/core-js": "^0.9.35",
     "@types/node": "^6.0.45",
     "angular-in-memory-web-api": "^0.2.1",
     "core-js": "^2.4.1",
