--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "strip-ansi": "^3.0.0",
     "stylelint": "^7.7.0",
     "symlink-or-copy": "^1.0.1",
+    "systemjs-builder": "^0.16.1",
     "travis-after-modes": "0.0.6-2",
     "ts-node": "^2.0.0",
     "tslint": "^4.3.1",
