--- a/src/demo/tsconfig.json
+++ b/src/demo/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
+    "rootDir": "./Client/App/",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
@@ -12,7 +13,6 @@
   "compileOnSave": false,
   "exclude": [
     "node_modules",
-    "wwwroot",
     "typings/**",
     "typings/*.d.ts"
   ],
