--- a/src/demo/tsconfig.json
+++ b/src/demo/tsconfig.json
@@ -8,7 +8,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   },
   "compileOnSave": false,
   "exclude": [
@@ -17,10 +20,6 @@
     "typings/*.d.ts"
   ],
   "types": [
-    "core-js",
     "node"
-  ],
-  "typeRoots": [
-    "./node_modules/@types"
   ]
 }
