--- a/tools/gulp/tsconfig.json
+++ b/tools/gulp/tsconfig.json
@@ -22,8 +22,7 @@
       "../../node_modules/@types"
     ],
     "types": [
-      "node",
-      "core-js"
+      "node"
     ]
   },
   "exclude": [
