Rewoved smil dependency, fix tsc

--- a/src/demo/bower.json
+++ b/src/demo/bower.json
@@ -3,7 +3,6 @@
   "private": true,
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.5",
-    "font-awesome": "^4.7.0",
-    "smil": "https://raw.githubusercontent.com/ericwilligers/svg-animation/master/smil-in-javascript.js"
+    "font-awesome": "^4.7.0"
   }
 }
