--- a/src/demo/tsconfig.json
+++ b/src/demo/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "lib": [
+      "dom", "es2015"
+    ],
     "module": "commonjs",
     "rootDir": "./Client/App/",
     "moduleResolution": "node",
