--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -26,13 +26,13 @@
   },
   "homepage": "https://github.com/joergkrause/svogv#readme",
   "peerDependencies": {
-    "@angular/common": "^2.2.0",
-    "@angular/compiler": "^2.2.0",
-    "@angular/core": "^2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@angular/http": "^2.2.0",
-    "@angular/platform-browser": "^2.2.0",
-    "@angular/platform-browser-dynamic": "^2.2.0",
-    "@angular/router": "^3.1.0"
+    "@angular/common": ">= 2.2.0",
+    "@angular/compiler": ">= 2.2.0",
+    "@angular/core": ">= 2.2.0",
+    "@angular/forms": ">= 2.2.0",
+    "@angular/http": ">= 2.2.0",
+    "@angular/platform-browser": ">= 2.2.0",
+    "@angular/platform-browser-dynamic": ">= 2.2.0",
+    "@angular/router": ">= 3.1.0"
   }
 }
