--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # dependencies
 /node_modules
 /bower_components
+/src/lib/node_modules
+/src/demo/bower_components
+/src/demo/node_modules
 
 # IDEs
 /.idea
