--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -14,30 +14,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.2.0",
-    "@angular/compiler": "^2.2.0",
-    "@angular/core": "^2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@angular/http": "^2.2.0",
-    "@angular/platform-browser": "^2.2.0",
-    "@angular/platform-browser-dynamic": "^2.2.0",
-    "@angular/router": "^3.1.0",
-    "@angular/upgrade": "^2.2.0",
-    "@types/core-js": "^0.9.35",
-    "@types/node": "^6.0.45",
-    "angular-in-memory-web-api": "^0.2.1",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@angular/upgrade": "^4.0.0",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.1",
+    "rxjs": "5.0.1",
     "svogv": "^0.1.4",
-    "systemjs": "^0.19.39",
-    "zone.js": "^0.7.2"
+    "systemjs": "^0.19.40",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angularclass/hmr-loader": "^3.0.2",
-    "@types/core-js": "^0.9.34",
+    "@types/core-js": "^0.9.41",
+    "@types/node": "^6.0.45",
     "@types/gulp": "^3.8.29",
-    "@types/rx": "^2.5.33",
+    "@types/rx": "^4.1.1",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^3.0.0-beta.10",
     "css-loader": "^0.26.1",
@@ -56,7 +54,7 @@
     "node-sass": "^4.3.0",
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
-    "systemjs-builder": "^0.15.34",
+    "systemjs-builder": "^0.16.4",
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.4",
     "webpack": "^2.2.0"
