--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -34,5 +34,8 @@
     "@angular/platform-browser": ">= 2.2.0",
     "@angular/platform-browser-dynamic": ">= 2.2.0",
     "@angular/router": ">= 3.1.0"
+  },
+  "dependencies": {
+    "typescript": "^2.3.2"
   }
 }
