--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svogv",
-  "version": "0.1.4",
-  "description": "An advanced set of Angular 4 (Angular2) widgets and model driven forms support.",
+  "version": "0.2.0",
+  "description": "An advanced set of Angular 4 (> Angular2) widgets and model driven forms support.",
   "main": "./bundles/svogv.umd.js",
   "module": "./index.js",
   "typings": "./index.d.ts",
