--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -26,9 +26,9 @@
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.1",
-    "svogv": "^0.2.0",
     "systemjs": "^0.19.40",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "svogv": "^0.2.0"
   },
   "devDependencies": {
     "@angularclass/hmr-loader": "^3.0.2",
