--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -27,20 +27,20 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.4.2",
     "svogv": "^0.2.0",
     "systemjs": "^0.19.40",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angularclass/hmr-loader": "^3.0.2",
-    "@types/core-js": "^0.9.41",
-    "@types/node": "^6.0.45",
-    "@types/gulp": "^3.8.29",
-    "@types/rx": "^4.1.1",
+    "@angularclass/hmr-loader": "^3.0.4",
     "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "^3.0.0-beta.10",
+    "awesome-typescript-loader": "^3.2.2",
     "css-loader": "^0.26.1",
+    "@types/core-js": "^0.9.42",
+    "@types/gulp": "^3.8.33",
+    "@types/node": "^6.0.85",
+    "@types/rx": "^4.1.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
@@ -49,16 +49,16 @@
     "gulp-print": "^2.0.1",
     "gulp-remove-html-comments": "^1.0.1",
     "gulp-sass": "^2.3.2",
-    "gulp-typescript": "^3.0.2",
+    "gulp-typescript": "^3.2.1",
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
     "http-server": "^0.10.0",
-    "node-sass": "^4.3.0",
+    "node-sass": "^4.5.3",
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "systemjs-builder": "^0.16.4",
-    "ts-loader": "^2.0.0",
-    "typescript": "^2.1.4",
-    "webpack": "^2.2.0"
+    "ts-loader": "^2.3.2",
+    "typescript": "^2.4.2",
+    "webpack": "^2.7.0"
   }
 }
