--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -33,9 +33,7 @@
     "@angular/http": ">= 2.2.0",
     "@angular/platform-browser": ">= 2.2.0",
     "@angular/platform-browser-dynamic": ">= 2.2.0",
-    "@angular/router": ">= 3.1.0"
-  },
-  "dependencies": {
+    "@angular/router": ">= 3.1.0",
     "typescript": "^2.3.2"
   }
 }
