--- a/package.json
+++ b/package.json
@@ -36,85 +36,85 @@
   },
   "homepage": "https://github.com/joergkrause/svogv#readme",
   "dependencies": {
-    "@angular/common": ">= 2.2.0",
-    "@angular/compiler": ">= 2.2.0",
-    "@angular/core": ">= 2.2.0",
-    "@angular/forms": ">= 2.2.0",
-    "@angular/http": ">= 2.2.0",
-    "@angular/platform-browser": ">= 2.2.0",
-    "@angular/platform-browser-dynamic": ">= 2.2.0",
-    "@angular/platform-server": ">= 2.2.0",
-    "@angular/router": ">= 3.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/platform-server": "^4.3.6",
+    "@angular/router": "^4.3.6",
+    "core-js": "^2.5.1",
+    "rxjs": "^5.4.3",
     "systemjs": "0.19.38",
-    "zone.js": "^0.8.16"
+    "zone.js": "^0.8.17"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.2.0",
-    "@types/core-js": "^0.9.35",
-    "@types/glob": "^5.0.29",
-    "@types/gulp": "^3.8.29",
-    "@types/hammerjs": "^2.0.30",
-    "@types/jasmine": "^2.2.31",
+    "@types/core-js": "^0.9.43",
+    "@types/glob": "^5.0.32",
+    "@types/gulp": "^3.8.33",
+    "@types/hammerjs": "^2.0.35",
+    "@types/jasmine": "^2.6.0",
     "@types/merge2": "0.0.28",
     "@types/minimist": "^1.1.28",
-    "@types/node": "^6.0.34",
+    "@types/node": "^6.0.88",
     "@types/protractor": "^4.0.0",
     "@types/run-sequence": "0.0.27",
     "@types/rx": "^4.1.1",
     "@types/selenium-webdriver": "2.53.36",
-    "axe-core": "^2.0.7",
+    "axe-core": "^2.4.1",
     "axe-webdriverjs": "^0.5.0",
-    "conventional-changelog": "^1.1.0",
-    "dgeni": "^0.4.2",
+    "conventional-changelog": "^1.1.5",
+    "dgeni": "^0.4.9",
     "dgeni-packages": "^0.16.2",
-    "express": "^4.14.0",
-    "firebase-tools": "^3.2.1",
+    "express": "^4.15.4",
+    "firebase-tools": "^3.10.1",
     "fs-extra": "^1.0.0",
-    "glob": "^7.1.1",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-better-rollup": "^1.0.2",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.3.0",
-    "gulp-cli": "^1.2.2",
+    "gulp-cli": "^1.4.0",
     "gulp-connect": "^5.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-markdown": "^1.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.5.2",
-    "gulp-sourcemaps": "^2.2.3",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-transform": "^1.1.0",
-    "gulp-typedoc": "^2.0.2",
-    "gulp-typescript": "^3.1.4",
-    "highlight.js": "^9.9.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.1.1",
-    "karma-browserstack-launcher": "^1.0.1",
-    "karma-chrome-launcher": "^2.0.0",
+    "gulp-typedoc": "^2.1.0",
+    "gulp-typescript": "^3.2.2",
+    "highlight.js": "^9.12.0",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-browserstack-launcher": "^1.3.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-sauce-launcher": "^1.0.0",
+    "karma-sauce-launcher": "^1.2.0",
     "madge": "^0.6.0",
-    "merge2": "^1.0.2",
+    "merge2": "^1.2.0",
     "minimist": "^1.2.0",
-    "node-sass": "^4.2.0",
+    "node-sass": "^4.5.3",
     "protractor": "^4.0.8",
     "resolve-bin": "^0.4.0",
     "run-sequence": "^1.2.2",
     "sass": "^0.5.0",
-    "selenium-webdriver": "^3.0.0",
+    "selenium-webdriver": "^3.5.0",
     "strip-ansi": "^3.0.0",
-    "stylelint": "^7.7.0",
+    "stylelint": "^7.13.0",
     "symlink-or-copy": "^1.0.1",
-    "systemjs-builder": "^0.16.1",
+    "systemjs-builder": "^0.16.10",
     "travis-after-modes": "0.0.6-2",
     "ts-node": "^2.0.0",
     "tslint": "^4.3.1",
-    "typedoc": "^0.5.1",
+    "typedoc": "^0.5.10",
     "typescript": "~2.1.4",
-    "which": "^1.2.4"
+    "which": "^1.3.0"
   }
 }
