Reorganisation for leaner setup

--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/platform-server": "^4.3.6",
     "@angular/router": "^4.3.6",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.5.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.4.3",
     "systemjs": "0.19.38",
     "zone.js": "^0.8.17"
@@ -80,16 +82,19 @@
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.3.0",
     "gulp-cli": "^1.4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-markdown": "^1.2.0",
+    "gulp-print": "^2.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-transform": "^1.1.0",
     "gulp-typedoc": "^2.1.0",
     "gulp-typescript": "^3.2.2",
+    "gulp-uglify": "^3.0.0",
     "highlight.js": "^9.12.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
