--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "An advanced set of Angular 4 (Angular2) widgets and model driven forms support.",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build",
-    "demoall": "gulp build && cd src/demo && npm run exec",
-    "execdemo": "cd src/demo && npm run exec",
+    "build": "gulp build && gulp demo:bundle",
+    "demoall": "gulp build && gulp demo:bundle && npm start",
+    "start": "http-server ./dist/demo -p 3000 -g -o",
     "test": "gulp test",
     "tslint": "gulp lint",
     "stylelint": "gulp lint",
@@ -36,15 +36,15 @@
   },
   "homepage": "https://github.com/joergkrause/svogv#readme",
   "dependencies": {
-    "@angular/common": "^4.3.6",
-    "@angular/compiler": "^4.3.6",
-    "@angular/core": "^4.3.6",
-    "@angular/forms": "^4.3.6",
-    "@angular/http": "^4.3.6",
-    "@angular/platform-browser": "^4.3.6",
-    "@angular/platform-browser-dynamic": "^4.3.6",
-    "@angular/platform-server": "^4.3.6",
-    "@angular/router": "^4.3.6",
+    "@angular/common": "^4.4.5",
+    "@angular/compiler": "^4.4.5",
+    "@angular/core": "^4.4.5",
+    "@angular/forms": "^4.4.5",
+    "@angular/http": "^4.4.5",
+    "@angular/platform-browser": "^4.4.5",
+    "@angular/platform-browser-dynamic": "^4.4.5",
+    "@angular/platform-server": "^4.4.5",
+    "@angular/router": "^4.4.5",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.5.1",
     "font-awesome": "^4.7.0",
@@ -62,7 +62,7 @@
     "@types/jasmine": "^2.6.0",
     "@types/merge2": "0.0.28",
     "@types/minimist": "^1.1.28",
-    "@types/node": "^6.0.88",
+    "@types/node": "^6.0.89",
     "@types/protractor": "^4.0.0",
     "@types/run-sequence": "0.0.27",
     "@types/rx": "^4.1.1",
@@ -95,6 +95,7 @@
     "gulp-typedoc": "^2.1.0",
     "gulp-typescript": "^3.2.2",
     "gulp-uglify": "^3.0.0",
+    "gulp-zip": "^4.0.0",
     "highlight.js": "^9.12.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
@@ -117,10 +118,10 @@
     "symlink-or-copy": "^1.0.1",
     "systemjs-builder": "^0.16.10",
     "travis-after-modes": "0.0.6-2",
-    "ts-node": "^2.0.0",
+    "ts-node": "^3.3.0",
     "tslint": "^4.3.1",
     "typedoc": "^0.5.10",
-    "typescript": "~2.1.4",
+    "typescript": "2.3.4",
     "which": "^1.3.0"
   }
 }
