--- a/src/demo/tsconfig.json
+++ b/src/demo/tsconfig.json
@@ -7,19 +7,18 @@
     "module": "commonjs",
     "outDir": "../../dist/demo/app",
     "moduleResolution": "node",
-    "sourceMap": true,
+    "sourceMap": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
     "typeRoots": [
-      "./node_modules/@types"
+      "../../node_modules/@types"
     ]
   },
   "files": [
     "./app/app.ts"
   ],
-  "compileOnSave": false,
   "exclude": [
     "node_modules"
   ],
