--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "svogv",
-  "version": "0.2.3",
-  "description": "An advanced set of Angular 4 (Angular2) widgets and model driven forms support.",
+  "version": "0.3.0",
+  "description": "A decorator based appreach for model driven forms and some time saving form widgets.",
   "main": "index.js",
   "scripts": {
     "build": "gulp build && gulp demo:bundle",
     "demoall": "gulp build && gulp demo:bundle && npm start",
-    "start": "http-server ./dist/demo -p 3000 -g -o",
+    "start": "http-server ./dist/demo --gzip -p 3000 -o",
     "test": "gulp test",
-    "tslint": "gulp lint",
-    "stylelint": "gulp lint",
+    "lint": "gulp lint",
     "docs": "gulp docs",
     "codedoc": "./node_modules/.bin/compodoc -p src/lib/tsconfig-srcs.json",
-    "setup": "npm install && cd src/demo && npm install && cd ../../"
+    "setup": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -97,6 +96,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.0.0",
     "highlight.js": "^9.12.0",
+    "http-server": "^0.10.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-browserstack-launcher": "^1.3.0",
