--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A decorator based appreach for model driven forms and some time saving form widgets.",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build && gulp demo:bundle",
-    "demoall": "gulp build && gulp demo:bundle && npm start",
+    "build": "gulp build && gulp demo:build",
+    "demoall": "gulp build && gulp demo:build && npm start",
     "start": "http-server ./dist/demo --gzip -p 3000 -o",
     "test": "gulp test",
     "lint": "gulp lint",
@@ -45,6 +45,7 @@
     "@angular/platform-server": "^4.4.5",
     "@angular/router": "^4.4.5",
     "bootstrap": "^4.0.0-beta",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.4.3",
@@ -96,6 +97,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.0.0",
     "highlight.js": "^9.12.0",
+    "html-minifier": "^3.5.6",
     "http-server": "^0.10.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
