--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A decorator based appreach for model driven forms and some time saving form widgets.",
   "main": "index.js",
   "scripts": {
+    "clean-aot": "rimraf dist/aot/*",
+    "build-aot": "npm run clean-aot && webpack --config webpack.config.js --progress --profile --bail",
     "build": "gulp build && gulp demo:build",
     "demoall": "gulp build && gulp demo:build && npm start",
     "start": "http-server ./dist/demo --gzip -p 3000 -o",
@@ -56,6 +58,7 @@
     "@angular/compiler-cli": "^2.2.0",
     "@angular/platform-server": "^4.4.6",
     "@compodoc/compodoc": "^1.0.1",
+    "@ngtools/webpack": "^1.7.4",
     "@types/core-js": "^0.9.43",
     "@types/glob": "^5.0.32",
     "@types/gulp": "^3.8.33",
@@ -68,12 +71,17 @@
     "@types/run-sequence": "0.0.27",
     "@types/rx": "^4.1.1",
     "@types/selenium-webdriver": "2.53.36",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.2.3",
     "axe-core": "^2.4.1",
     "axe-webdriverjs": "^0.5.0",
+    "canonical-path": "0.0.2",
     "conventional-changelog": "^1.1.5",
     "dgeni": "^0.4.9",
     "dgeni-packages": "^0.16.2",
+    "enhanced-resolve": "^3.3.0",
     "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.1",
     "firebase-tools": "^3.10.1",
     "fs-extra": "^1.0.0",
     "glob": "^7.1.2",
@@ -98,7 +106,9 @@
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.0.0",
     "highlight.js": "^9.12.0",
+    "html-loader": "^0.5.1",
     "html-minifier": "^3.5.6",
+    "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
@@ -113,6 +123,7 @@
     "node-sass": "^4.5.3",
     "protractor": "^4.0.8",
     "resolve-bin": "^0.4.0",
+    "rimraf": "^2.6.2",
     "run-sequence": "^1.2.2",
     "sass": "^0.5.0",
     "selenium-webdriver": "^3.5.0",
@@ -121,10 +132,13 @@
     "symlink-or-copy": "^1.0.1",
     "systemjs-builder": "^0.16.10",
     "travis-after-modes": "0.0.6-2",
+    "ts-helpers": "^1.1.2",
     "ts-node": "^3.3.0",
     "tslint": "^4.3.1",
     "typedoc": "^0.5.10",
     "typescript": "2.3.4",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
     "which": "^1.3.0"
   }
 }
