--- a/src/demo/tsconfig-ngc.json
+++ b/src/demo/tsconfig-ngc.json
@@ -1,28 +1,23 @@
 {
   "compilerOptions": {
-    "target": "es2015",
-    "lib": [
-      "dom", "es2015"
-    ],
-    "module": "es2015",
-    "outDir": "../../dist/compiled",
+    "target": "es5",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "sourceMap": false,
+    "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "typeRoots": [
-      "../../node_modules/@types"
-    ]
+    "lib": ["dom","es2015"]
   },
-  "files": [
-    "./app/app.ts"
-  ],
+  "compileOnSave": true,
   "exclude": [
-    "node_modules"
+    "node_modules/*",
+    "aot/",
+    "aot/app/app.ngfactory.ts"
   ],
-  "types": [
-    "node"
-  ]
+  "angularCompilerOptions": {
+    "genDir": "aot/",
+    "skipMetadataEmit": true
+  }
 }
