--- a/src/demo/tsconfig-ngc.json
+++ b/src/demo/tsconfig-ngc.json
@@ -8,7 +8,8 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "lib": ["dom","es2015"]
+    "lib": ["dom","es2015"],
+    "paths": { "@angular/*": ["../node_modules/@angular/*"] }
   },
   "compileOnSave": true,
   "exclude": [
