--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svogv",
-  "version": "0.3.5",
+  "version": "0.6.0",
   "description": "A decorator based appreach for model driven forms and some time saving form widgets.",
   "main": "index.js",
   "scripts": {
@@ -37,106 +37,106 @@
   },
   "homepage": "https://github.com/joergkrause/svogv#readme",
   "dependencies": {
-    "@angular/common": "^4.4.5",
-    "@angular/compiler": "^4.4.5",
-    "@angular/core": "^4.4.5",
-    "@angular/forms": "^4.4.5",
-    "@angular/http": "^4.4.5",
-    "@angular/platform-browser": "^4.4.5",
-    "@angular/platform-browser-dynamic": "^4.4.5",
-    "@angular/router": "^4.4.5",
-    "bootstrap": "^4.0.0-beta",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "bootstrap": "^4.1.0",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.1",
+    "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
-    "rxjs": "^5.4.3",
+    "rxjs": "^6.3.2",
     "systemjs": "0.19.38",
-    "zone.js": "^0.8.17"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.9",
-    "@angular/compiler-cli": "^4.4.5",
-    "@angular/platform-server": "^4.4.5",
-    "@compodoc/compodoc": "^1.0.1",
-    "@ngtools/webpack": "^1.7.4",
-    "@types/core-js": "^0.9.43",
-    "@types/glob": "^5.0.32",
-    "@types/gulp": "^3.8.33",
-    "@types/hammerjs": "^2.0.35",
-    "@types/jasmine": "^2.6.0",
+    "@angular/cli": "^6.2.2",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/platform-server": "^6.0.0",
+    "@compodoc/compodoc": "^1.1.5",
+    "@ngtools/webpack": "^6.2.2",
+    "@types/core-js": "^2.5.0",
+    "@types/glob": "^5.0.35",
+    "@types/gulp": "^3.9.1",
+    "@types/hammerjs": "^2.0.36",
+    "@types/jasmine": "^2.8.8",
     "@types/merge2": "0.0.28",
     "@types/minimist": "^1.1.28",
-    "@types/node": "^6.0.89",
+    "@types/node": "^8.11.0",
     "@types/protractor": "^4.0.0",
-    "@types/run-sequence": "0.0.27",
+    "@types/run-sequence": "0.0.30",
     "@types/rx": "^4.1.1",
-    "@types/selenium-webdriver": "2.53.36",
+    "@types/selenium-webdriver": "3.0.10",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.2.3",
-    "axe-core": "^2.4.1",
+    "awesome-typescript-loader": "^3.5.0",
+    "axe-core": "^2.6.1",
     "axe-webdriverjs": "^0.5.0",
     "canonical-path": "0.0.2",
-    "conventional-changelog": "^1.1.5",
-    "dgeni": "^0.4.9",
+    "conventional-changelog": "^1.1.24",
+    "dgeni": "^0.4.10",
     "dgeni-packages": "^0.16.2",
     "enhanced-resolve": "^3.3.0",
-    "express": "^4.15.4",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.1",
-    "firebase-tools": "^3.10.1",
+    "firebase-tools": "^3.19.3",
     "fs-extra": "^1.0.0",
-    "glob": "^7.1.2",
+    "glob": "^7.1.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-better-rollup": "^1.0.2",
     "gulp-clean": "^0.3.2",
-    "gulp-clean-css": "^2.3.0",
+    "gulp-clean-css": "^2.3.2",
     "gulp-cli": "^1.4.0",
     "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.0.0",
+    "gulp-connect": "^5.6.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-markdown": "^1.2.0",
     "gulp-print": "^2.0.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^3.2.1",
     "gulp-shell": "^0.5.2",
-    "gulp-sourcemaps": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-transform": "^1.1.0",
-    "gulp-typescript": "^3.2.2",
-    "gulp-uglify": "^3.0.0",
-    "gulp-zip": "^4.0.0",
+    "gulp-typescript": "^3.2.4",
+    "gulp-uglify": "^3.0.1",
+    "gulp-zip": "^4.2.0",
     "highlight.js": "^9.12.0",
-    "html-loader": "^0.5.1",
-    "html-minifier": "^3.5.6",
+    "html-loader": "^0.5.5",
+    "html-minifier": "^3.5.20",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
-    "jasmine-core": "^2.8.0",
+    "jasmine-core": "^2.99.1",
     "karma": "^1.7.1",
     "karma-browserstack-launcher": "^1.3.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^1.1.2",
     "karma-sauce-launcher": "^1.2.0",
-    "madge": "^0.6.0",
-    "merge2": "^1.2.0",
+    "madge": "^3.2.0",
+    "merge2": "^1.2.2",
     "minimist": "^1.2.0",
-    "node-sass": "^4.5.3",
-    "protractor": "^4.0.8",
+    "node-sass": "^4.9.3",
+    "protractor": "^5.4.1",
     "resolve-bin": "^0.4.0",
     "rimraf": "^2.6.2",
-    "run-sequence": "^1.2.2",
-    "sass": "^0.5.0",
+    "run-sequence": "^2.2.1",
+    "sass": "^1.13.4",
     "selenium-webdriver": "^3.5.0",
     "strip-ansi": "^3.0.0",
     "stylelint": "^7.13.0",
-    "symlink-or-copy": "^1.0.1",
-    "systemjs-builder": "^0.16.10",
+    "symlink-or-copy": "^1.2.0",
+    "systemjs-builder": "^0.16.13",
     "travis-after-modes": "0.0.6-2",
     "ts-helpers": "^1.1.2",
     "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "2.3.4",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "which": "^1.3.0"
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.19.1",
+    "which": "^1.3.1"
   }
 }
