--- a/src/demo/package.json
+++ b/src/demo/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "svogv",
+  "name": "svogv-demo",
   "version": "0.6.0",
-  "description": "A decorator based approach for model driven forms and some time saving form widgets.",
-  "main": "index.js",
+  "description": "Demo app for SVOGV module.",
   "scripts": {
     "clean": "npm run clean-lib && npm run clean-demo",
     "clean-lib": "rimraf dist/lib",
@@ -11,10 +10,7 @@
     "build-lib": "npm run clean-lib && webpack --config webpack.config.module.js --progress --profile --bail",
     "build-demo": "npm run clean-demo && webpack --config webpack.config.demo.js --progress --profile --bail",
     "start": "npm run build && http-server ./dist/demo --gzip -p 3000 -o",
-    "test": "gulp test",
     "lint": "tslint --project ./src/lib",
-    "docs": "gulp docs",
-    "codedoc": "./node_modules/.bin/compodoc -p src/lib/tsconfig-srcs.json",
     "setup": "npm install && npm run build"
   },
   "repository": {
@@ -52,6 +48,7 @@
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.3.2",
+    "svogv": "file:../../dist/lib",
     "systemjs": "0.19.38",
     "zone.js": "^0.8.26"
   },
@@ -59,60 +56,23 @@
     "@angular/cli": "^6.2.2",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/platform-server": "^6.0.0",
-    "@compodoc/compodoc": "^1.1.5",
     "@ngtools/webpack": "^6.2.2",
     "@types/core-js": "^2.5.0",
     "@types/glob": "^5.0.35",
-    "@types/gulp": "^4.0.5",
-    "@types/hammerjs": "^2.0.36",
-    "@types/jasmine": "^2.8.8",
     "@types/merge2": "0.0.28",
     "@types/minimist": "^1.1.28",
     "@types/node": "^10.10.1",
-    "@types/protractor": "^4.0.0",
-    "@types/run-sequence": "0.0.30",
     "@types/rx": "^4.1.1",
-    "@types/selenium-webdriver": "3.0.10",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.5.0",
-    "axe-core": "^2.6.1",
-    "axe-webdriverjs": "^0.5.0",
-    "canonical-path": "0.0.2",
-    "conventional-changelog": "^1.1.24",
     "copy-webpack-plugin": "^4.5.2",
-    "dgeni": "^0.4.10",
-    "dgeni-packages": "^0.16.2",
-    "enhanced-resolve": "^3.3.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "firebase-tools": "^3.19.3",
     "fs-extra": "^1.0.0",
-    "glob": "^7.1.3",
     "highlight.js": "^9.12.0",
     "html-loader": "^0.5.5",
-    "html-minifier": "^3.5.20",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.10.0",
-    "jasmine-core": "^2.99.1",
-    "karma": "^1.7.1",
-    "karma-browserstack-launcher": "^1.3.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-sauce-launcher": "^1.2.0",
-    "madge": "^3.2.0",
-    "merge2": "^1.2.2",
-    "minimist": "^1.2.0",
     "node-sass": "^4.9.3",
     "protractor": "^5.4.1",
-    "resolve-bin": "^0.4.0",
-    "rimraf": "^2.6.2",
     "sass": "^1.13.4",
-    "selenium-webdriver": "^3.5.0",
-    "strip-ansi": "^3.0.0",
-    "stylelint": "^7.13.0",
-    "symlink-or-copy": "^1.2.0",
-    "systemjs-builder": "^0.16.13",
-    "travis-after-modes": "0.0.6-2",
     "ts-helpers": "^1.1.2",
     "ts-node": "^3.3.0",
     "tslint": "^5.11.0",
