--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "npm run clean-lib && npm run clean-demo",
     "clean-lib": "rimraf dist/lib",
     "clean-demo": "rimraf dist/demo",
-    "build": "npm run build-lib && npm run build-demo",
-    "build-lib": "npm run clean-lib && webpack --config webpack.config.module.js --progress --profile --bail",
-    "build-demo": "npm run clean-demo && webpack --config webpack.config.demo.js --progress --profile --bail",
+    "build": "npm run clean && npm run build-lib && npm run build-demo",
+    "build-lib": "npm run clean-lib && webpack --config webpack.config.js --progress --profile --bail",
+    "build-demo": "npm run clean-demo && cd ./src/demo && webpack --config webpack.config.js --progress --profile --bail && cd ../../",
     "start": "npm run build && http-server ./dist/demo --gzip -p 3000 -o",
     "test": "gulp test",
     "lint": "tslint --project ./src/lib",
@@ -114,9 +114,11 @@
     "systemjs-builder": "^0.16.13",
     "travis-after-modes": "0.0.6-2",
     "ts-helpers": "^1.1.2",
+    "ts-loader": "^5.1.1",
     "ts-node": "^3.3.0",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
+    "typescript-declaration-webpack-plugin": "^0.1.1",
     "url-loader": "^1.1.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
