--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "svogv-demo",
   "version": "0.6.0",
+  "description": "A decorator based approach for model driven forms and some time saving form widgets.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,7 +11,6 @@
     "e2e": "ng e2e",
     "codedoc": "compodoc -p ./projects/svogv/tsconfig.lib.json --output ./docs/documentation"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
