--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^7.4.3",
     "@angular-devkit/build-angular": "^0.8.9",
     "@angular-devkit/build-ng-packagr": "^0.8.9",
     "@angular/cli": "^7.3.5",
