--- a/package.json
+++ b/package.json
@@ -15,30 +15,31 @@
     "codedoc-dist": "compodoc -p ./projects/svogv/tsconfig.lib.json --output ./dist/svogv-demo/documentation"
   },
   "dependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.5.4",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^8.4.1",
-    "@angular-devkit/build-angular": "^0.802.2",
-    "@angular-devkit/build-ng-packagr": "^0.802.2",
-    "@angular/cli": "^8.3.25",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-ng-packagr": "~0.901.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
+    "@angular/language-service": "^9.1.0",
     "@compodoc/compodoc": "^1.1.11",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^10.17.17",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "http-server": "^0.11.1",
     "jasmine-core": "~3.4.0",
@@ -48,11 +49,9 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "ng-packagr": "^5.7.1",
+    "ng-packagr": "^9.0.0",
     "ts-node": "~8.3.0",
-    "tsickle": "^0.36.0",
-    "tslib": "^1.11.1",
     "tslint": "~5.18.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
