--- a/projects/bootstrap-ui/tsconfig.prod.json
+++ b/projects/bootstrap-ui/tsconfig.prod.json
@@ -1,8 +1,10 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.lib.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "declarationMap": false
+    "declarationMap": false,
+    "sourceMap": false,
+    "inlineSources": false
   },
   "angularCompilerOptions": {
     "enableIvy": false
